# pygubu-designer

./: .gitignore  .pre-commit-config.yaml  AUTHORS  HISTORY.md  LEEME.md  LISEZMOI.md  MANIFEST.in  README-vi.md  README.md  build-and-serve.sh  create-imgs.py  devtool.sh  fades-error.txt  makepofile.sh  pygubudesigner.sh  pygubudesigner_.py  pyproject.toml  requirements.txt  run.sh  setup.py  test_pygubu_import.py
Documentation/README/: cn.md  es.md  fr.md  vi.md
development/: create-imgs.py  dev-notes.txt  devtool.py  pygubudesigner_.py  resources-design.md
development/gettext/: pygubu.its  pygubu.loc
development/new-designer-icons/: main.py  testnewicons.ui  testnewiconsapp.py
development/pygubuLogo/: rootOfSVGs.txt
examples/: README.md  button_cb.py  button_cb.ui  commands.py  commands.ui  managers.ui  menu.py  menu.ui  scrolledframe-layouts.ui  treeview.py
examples/7guis/: README.md
examples/command_properties/: command_properties.py  command_properties.ui  command_properties2.py
examples/control_variables/: controlvariables.py  controlvariables.ui
examples/custom_widget/: README.md  testapp.ui  timerapp.py  timerappwidgets.py  timewidget.py
examples/customapp/: testapp.ui  timewidget.py
examples/customtkinter/: README.md
examples/dialogs/: README.md
examples/editable_treeview/: demoapp.py  demoapp.ui
examples/forms/: demo1.ui  formsdemo1app.py  formsdemo1appui.py  formsdemo1base.py  project_styles.py
examples/helloworld/: README.md  helloworld.py  helloworld.ui  helloworldui.py  holamundo.py  holamundo.ui
examples/i18n_gettext_demo/: README.md  demo-i18n.ui  demoapp.py  i18n.py
examples/image_property/: image_property.py  image_property.ui
examples/integration_with_cxFreeze/: README.md  myapp.py  setup.py
examples/integration_with_nuitka/: README.md  myapp.py  myapp.ui
examples/integration_with_py2exe/: README.md  myapp.py  setup.py
examples/integration_with_pyinstaller/: README.md  myapp.py  myapp.spec
examples/integration_with_tkcalendar/: README.md
examples/integration_with_zipapp/: README.md
examples/jpg_image_on_canvas/: demoapp.py  demoapp.ui  requirements.txt
examples/menubutton/: README.md  menubutton_demo.py  menubutton_demo.ui  menubutton_demoui.py
examples/notebook/: demo1.ui  demo1app.py
examples/pathchooserdemo/: README.md  pathchooserdemo.py  pathchooserdemo.ui
examples/pbs_themes/: README.md
examples/plugin_tkinterweb/: README.md
examples/scrolledframe/: README.md  demoapp.py  scrolledframe_demo.ui
examples/scrolledtext/: scrolledtext_demo.ui  scrolledtextdemoapp.py
examples/static_image/: demoapp.py  demoapp.ui
examples/tk_window/: README.md  tkdemo.ui  tkdemoapp.py
examples/toplevel_centered/: README.md  centered_demo1.py  centered_demo2.py  demo.ui
examples/toplevel_menu/: README.md  menu.py  menu.ui
examples/toplevel_multiple_toplevels/: README.md  rundemo.py
examples/treeview/: README.md
examples/treeview_editable/: README.md
examples/treeview_filterable/: README.md  demo.ui  demoapp.py
examples/user_input/: README.md  requirements.txt  userinput.ui  userinputapp.py
examples/windowdeleteevent/: demo1.py  demo1.ui  demo2.py  demo2.ui
po/: pygubu.pot
pygubudesigner/: __init__.py  actions.py  bindingseditor.py  codebuilder.py  codegenerator.py  containerlayouteditor.py  dialogs.py  i18n.py  layouteditor.py  logpanel.py  main.py  preferences.py  previewer.py  properties.py  propertieseditor.py  propertieshelp.py  rfilemanager.py  scriptgenerator.py  scripttemplate.py  shortcutdispatch.py  stylehandler.py  uitreeeditor.py  widgetdescr.py
pygubudesigner/codegen/: __init__.py  codebuilder.py  scriptgenerator.py
pygubudesigner/locale/: pygubu.pot
pygubudesigner/preview/: __init__.py  builder.py  helper.py  preview.py
pygubudesigner/template/: app.py  app.py.mako  base.py.mako  script.py  script.py.mako  widget.py  widget.py.mako
pygubudesigner/ui/: about_dialog.ui  ask_save_changes_dialog.ui  container_layout_editor_base.ui  preferences_dialog.ui  pygubu-ui.ui  scriptgenerator_dialog.ui
pygubudesigner/util/: __init__.py  gridcalculator.py  keyboard.py  (+2 more)
requirements/: development.txt  product.txt
tests/: debugdesigner.py  layout-expand.ui  test_plugin_init.py  tkvariables.ui
ui-designs/: about_dialog.ui  ask_save_changes_dialog.ui  container_layout_editor.ui  context_menu.ui  designer_settings.ui  filter_entry.ui  layout_editor.ui  main_menu.ui  messagebox.ui  project_settings.ui  project_tree_frame.ui  properties_editor.ui  pygubu_main.ui  treecomponent_palette.ui
(+350 files in other folders)
