[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygubu-designer"
description = "A simple GUI designer for the python tkinter module"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-3" }
keywords = ["gui", "tkinter", "designer"]
authors = [
  { name = "Alejandro Autalan", email = "alejandroautalan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "appdirs >=1.4.3",
    "Mako >=1.1.4",
    "screeninfo >=0.8",
    "black >=22.1.0",
    "pygubu >=0.25"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/alejandroautalan/pygubu-designer#readme"
Issues = "https://github.com/alejandroautalan/pygubu-designer/issues"
Source = "https://github.com/alejandroautalan/pygubu-designer"

[project.gui-scripts]
pygubu-designer = "pygubudesigner.main:start_pygubu"

[project.optional-dependencies]
ttkwidgets = ['ttkwidgets']
tksheet = ['tksheet']
tkinterweb = ['tkinterweb']
tkintertable = ['tkintertable']
tkcalendar = ['tkcalendar']
awesometkinter = ['AwesomeTkinter']
all = ['AwesomeTkinter', 'tkintertable', 'tksheet', 'ttkwidgets', 'tkinterweb', 'tkcalendar']

[tool.setuptools.dynamic]
version = {attr = "pygubudesigner.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pot", "*.po"]

[tool.black]
line-length = 80
target-version = ["py36", "py37", "py38", "py39", "py310"]
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
