[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygubu-designer"
version="0.42"
description = "A simple GUI designer for the python tkinter module"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
keywords = ["gui", "tkinter", "designer"]
authors = [
  { name = "Alejandro Autalan", email = "alejandroautalan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "platformdirs >=4.4.0",
    "Mako >=1.1.4",
    "screeninfo >=0.8",
    "autopep8 >=1.7",
    "blinker >=1.6",
    "pygubu >=0.39"
]

[project.urls]
Documentation = "https://github.com/alejandroautalan/pygubu-designer#readme"
Issues = "https://github.com/alejandroautalan/pygubu-designer/issues"
Source = "https://github.com/alejandroautalan/pygubu-designer"

[project.gui-scripts]
pygubu-designer = "pygubudesigner.main:start_pygubu"

[project.optional-dependencies]
ttkwidgets = ['ttkwidgets']
tksheet = ['tksheet']
tkinterweb = ['tkinterweb']
tkintertable = ['tkintertable']
tkcalendar = ['tkcalendar']
awesometkinter = ['AwesomeTkinter']
customtkinter = ['customtkinter >=5.2.2', 'packaging', 'pillow']
tkintermapview = ['tkintermapview']
all = [
  'AwesomeTkinter',
  'tkintertable',
  'tksheet',
  'ttkwidgets',
  'tkinterweb',
  'tkcalendar',
  'customtkinter >=5.2.2', 'packaging', 'pillow',
  'tkintermapview']

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pot", "*.po"]

[tool.black]
line-length = 80
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
